--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@supabase/ssr": "latest",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.2",
+    "recharts": "^2.15.0",
     "upgrade": "^1.1.0",
     "zod": "^3.23.8"
   },
