--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.2",
     "recharts": "^2.15.0",
+    "swr": "^2.3.0",
     "upgrade": "^1.1.0",
     "zod": "^3.23.8"
   },
