--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.2.1",
+    "jotai": "^2.12.1",
     "lucide-react": "^0.436.0",
     "moment": "^2.30.1",
     "next": "latest",
@@ -31,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.2",
     "recharts": "^2.15.0",
+    "sonner": "^2.0.1",
     "swr": "^2.3.0",
     "upgrade": "^1.1.0",
     "zod": "^3.23.8"
