--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "geist": "^1.2.1",
     "jotai": "^2.12.1",
     "lucide-react": "^0.436.0",
