--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "jotai": "^2.12.1",
     "lucide-react": "^0.436.0",
     "moment": "^2.30.1",
-    "next": "latest",
+    "next": "^15.2.3",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
     "react": "18.2.0",
