--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.10",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
@@ -40,7 +41,8 @@
     "sonner": "^2.0.1",
     "swr": "^2.3.0",
     "upgrade": "^1.1.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-defaults": "^0.1.3"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
