--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "setup-storage": "node scripts/setup-storage.js"
+    "setup-storage": "node scripts/setup-storage.js",
+    "test-storage": "node scripts/test-storage-url.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
