--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "geist": "^1.2.1",
+    "gray-matter": "^4.0.3",
     "jotai": "^2.12.1",
     "lucide-react": "^0.436.0",
     "moment": "^2.30.1",
@@ -41,6 +42,7 @@
     "react-day-picker": "^9.6.2",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.2",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.0",
     "sonner": "^2.0.1",
     "swr": "^2.3.0",
