--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "setup-storage": "node scripts/setup-storage.js",
     "test-storage": "node scripts/test-storage-url.js"
   },
@@ -51,15 +60,23 @@
     "zod-defaults": "^0.1.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
+    "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/ui": "^4.0.10",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.3",
+    "jsdom": "^27.2.0",
     "postcss": "8.4.33",
     "supabase": "^1.207.9",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vitest": "^4.0.10"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
