--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/ssr": "latest",
@@ -40,12 +42,15 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.24.10",
     "geist": "^1.2.1",
     "gray-matter": "^4.0.3",
     "jotai": "^2.12.1",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.436.0",
     "moment": "^2.30.1",
-    "next": "16.0.7",
+    "next": "^16.1.1",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
     "react": "19.0.1",
