--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.10",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.3.6",
@@ -67,7 +68,8 @@
     "upgrade": "^1.1.0",
     "webm-duration-fix": "^1.0.4",
     "zod": "^3.23.8",
-    "zod-defaults": "^0.1.3"
+    "zod-defaults": "^0.1.3",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
